[package]
name = "stopandwait"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/lmignini/stopandwait"
[dependencies]
rand = "0.9.2"
rfd = "0.15.4"
log = "0.4.28"
env_logger = "0.11.8"
crc32fast = "1.5"
clap = { version = "4.5.48", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
